--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -812,7 +812,7 @@ sidebar navigation
             color: #398bf7; }
         .sidebar-nav ul li a.active {
           font-weight: 500;
-          color: #263238; }
+          color: #263238;}
       .sidebar-nav ul li ul {
         padding-left: 28px; }
         .sidebar-nav ul li ul li a {
@@ -828,6 +828,7 @@ sidebar navigation
       .sidebar-nav ul li.nav-devider {
         height: 1px;
         background: rgba(120, 130, 140, 0.13);
+        background: #000000;
         display: block;
         margin: 15px 0; }
   .sidebar-nav > ul > li > a i {
